<resources>
    <string name="app_name">网络工具设计</string>

    <string name="navigation_drawer_open">打开侧拉抽屉</string>
    <string name="navigation_drawer_close">关闭侧拉抽屉</string>

    <string name="action_settings">Settings</string>
    <string name="textview_ipaddress">网络地址</string>
    <string name="textview_port">端口号</string>
    <string name="textview_result">连接结果</string>
    <string name="btn_connect">测试连接</string>
    <string name="btn_qingkong">清空数据</string>
    <string name="label_timeout">延迟时间</string>
    <string name="socket_connect_ok">端口连接成功</string>
    <string name="socket_connect_error">端口连接失败,网络异常或端口未开放</string>
    <string name="socket_connecting">端口连接中。。。。。。</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">请输入用户名</string>
    <string name="prompt_password">请输入邮箱</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">用户名错误</string>
    <string name="error_invalid_password">密码太短了</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">用户名不能为空</string>
    <string name="permission_rationale">"读取联系人
    </string>

</resources>
