<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/color_bg"
    android:paddingTop="50dp"
    android:gravity="center_horizontal" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_ipaddress" />

    <EditText
        android:id="@+id/editText_ipaddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView1"
        android:background="@drawable/shape_item"
        android:ems="10"
        android:inputType="text" >


    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText_ipaddress"
        android:layout_marginTop="17dp"
        android:text="@string/textview_port" />

    <EditText
        android:id="@+id/editText_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_item"
        android:layout_alignLeft="@+id/editText_ipaddress"
        android:layout_alignTop="@+id/textView2"
        android:ems="10"
     />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText_port"
        android:layout_marginTop="23dp"
        android:text="@string/textview_result" />

    
    <ScrollView 
         android:id="@+id/scv1"
        android:layout_width="276dp"
        android:layout_height="200dp"
        android:background="@drawable/shape_ping_textview"
        android:fillViewport="true"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:fadeScrollbars="false"
        android:overScrollMode="never"
        android:layout_marginTop="5dp"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
         <TextView
        android:id="@+id/connect_result"
        android:layout_width="276dp"
        android:layout_height="200dp"
        android:scrollbars="vertical"
        android:paddingLeft="10dp" />
        </LinearLayout>
        
    </ScrollView>
    
   

    <Button
        android:id="@+id/button_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignRight="@+id/editText_port"
        android:layout_below="@+id/scv1"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_button"
        android:text="@string/btn_connect" />
    <Button
        android:id="@+id/button_qingkong"
        android:onClick="click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignRight="@+id/editText_port"
        android:layout_below="@+id/button_connect"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_button"
        android:text="@string/btn_qingkong" />


</RelativeLayout>
